--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+d<!DOCTYPE html>
 <html>
 	<head>
 		<title>Home</title>
@@ -46,8 +46,7 @@
 							</li>
 							<li><a href="work.html">Work</a>
 							</li>
-							<li><a href="blog.html">Blog</a>
-							</li>
+						
 							<li><a href="contact.html">Contact</a>
 							</li>
 						</ul><!--  -->
