--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 									<p class="about__subtitle">Just Keep Scrolling! How To Design Lengthy, Lengthy Pages</p>
 									<p class="about__text">Maecenas lorem ex, euismod eget pulvinar non, facilisis ut leo. Quisque placerat purus in neque efficitur ornare. Nam at justo magna. Aliquam venenatis odio ante, non euismod augue porttitor eget. Maecenas nec viverra eros, eget euismod felis. Integer cursus libero sed lorem euismod, vel iaculis felis placerat. Pellentesque augue lacus, sodales et eros sed, molestie rhoncus ligula. Vivamus sed massa lorem. Suspendisse mollis lectus nec ex fermentum, in consectetur dolor egestas. Phasellus quis ipsum quis nisl ultricies sollicitudin id in dolor. Proin at consequat dui.</p>
 									
-								    <button onclick="self.location.href='assets/img/YI CHEN CHEN.pdf'"> <img src=assets/img/logo.png> </button>
+								    <button onclick="self.location.href='assets/img/YI CHEN CHEN.pdf'"> <img src=assets/img/resu.png> </button>
 
 
 									<!-- progress -->
