--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ d<!DOCTYPE html>
 <html>
 	<head>
 		<title>Home</title>
+		<link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="format-detection" content="telephone=no">
