--- a/work.html
+++ b/work.html
@@ -67,8 +67,8 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title">Let see what I did</h2>
-							<p class="page-title__text">Lorem ipsum dolor sit amet, consectetur </p>
+							<h2 class="page-title__title">Let's see what I did</h2>
+							<p class="page-title__text">All about users </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
