--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>About</title>
-		<link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
+		<link rel="icon" href="assets/img/favicon.png" type="img/png" sizes="32x32">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="format-detection" content="telephone=no">
