--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-d<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Home</title>
-		<link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
+		<link rel="icon" href="assets/img/favicon.png" type="img/png">	
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="format-detection" content="telephone=no">
