--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -84,9 +84,34 @@
 						<div>
 							<div class="work-detail__entry">
 								</p><br>
-								<div class="work-img"><img src="assets/img/Becky.pdf" alt=""></div>
+								<div class="work-img"><img src="assets/img/content/Title.png" alt=""></div>
 		                        </p><br>
-								<div class="work-img"><img src="assets/img/Becky Chen.pdf" alt=""></div>
+								<div class="work-img"><img src="assets/img/content/Agenda.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/Affinity Diagram.png" alt=""></div>
+								<div class="work-img"><img src="assets/img/content/AD-LIT RE.png" alt=""></div>
+		                        </p><br>
+								<div class="work-img"><img src="assets/img/content/AD-SME.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/AD-Survey.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/AD-Interview.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/AD-Usability.png" alt=""></div>
+								 </p><br>
+								<div class="work-img"><img src="assets/img/content/CA p3.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/CA p4.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/who to target.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/Recomd p1.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/Recomd p2.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/Recomd p3.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/Recomd p4.png" alt=""></div>
 							</div>
 						
 				</section>
