--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -66,7 +66,7 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title">Explore digital newsroom</h2>
+							<h2 class="page-title__title">Exploring Digital Newsroom</h2>
 							<p class="page-title__text">Nam elit ligula, egestas et ornare non, </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
