--- a/work-detail_2.html
+++ b/work-detail_2.html
@@ -66,8 +66,8 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title">Explore digital newsroom</h2>
-							<p class="page-title__text">Nam elit ligula, egestas et ornare non, </p>
+							<h2 class="page-title__title">Hear</h2>
+							<p class="page-title__text">An Interactive Learning & Social App for the Musician Community </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
