--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -84,6 +84,10 @@
 						<div>
 							<div class="work-detail__entry">
 								</p><br>
+								<p class="about__text">
+										Problem Space: 
+										<br>By client kickoff meeting I learned that Texas Department of Transportation (TxDOT) wants to deliver the messages on its own will, instead of being controlled by local media. Also, they want to raise its brand awareness and bridge the communication gap between TxDOT and the public 
+
 								<div class="work-img"><img src="assets/img/content/Title.png" alt=""></div>
 		                        </p><br>
 								<div class="work-img"><img src="assets/img/content/Agenda.png" alt=""></div>
@@ -104,6 +108,9 @@
 								<div class="work-img"><img src="assets/img/content/CA p4.png" alt=""></div>
 								</p><br>
 								<div class="work-img"><img src="assets/img/content/who to target.png" alt=""></div>
+								<p class="about__text">
+										Problem Space: 
+										<br>By client kickoff meeting I learned that Texas Department of Transportation (TxDOT) wants to deliver the messages on its own will, instead of being controlled by local media. Also, they want to raise its brand awareness and bridge the communication gap between TxDOT and the public 
 								</p><br>
 								<div class="work-img"><img src="assets/img/content/Recomd p1.png" alt=""></div>
 								</p><br>
