--- a/work-detail_2.html
+++ b/work-detail_2.html
@@ -84,9 +84,16 @@
 						<div>
 							<div class="work-detail__entry">
 								</p><br>
-								<div class="work-img"><img src="assets/img/Becky.pdf" alt=""></div>
+								<div class="work-img"><img src="assets/img/content2/ihear title.png" alt=""></div>
 		                        </p><br>
-								<div class="work-img"><img src="assets/img/Becky Chen.pdf" alt=""></div>
+								<div class="work-img"><img src="assets/img/content/Agenda.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/Affinity Diagram.png" alt=""></div>
+								<div class="work-img"><img src="assets/img/content/AD-LIT RE.png" alt=""></div>
+		                        </p><br>
+								<div class="work-img"><img src="assets/img/content/AD-SME.png" alt=""></div>
+								</p><br>
+								<div class="work-img"><img src="assets/img/content/AD-Survey.png" alt=""></div>
 							</div>
 						
 				</section>
