--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								
 								<!-- typing__module -->
 								<div class="typing__module">
-									<div class="typed-strings"><span>'m a UX researcher</span><span>'m also a designer</span><span>'m eager to explore answer</span>
+									<div class="typed-strings"><span>'m a UX researcher</span><span>'m also a designer</span><span>'m eager to explore answers</span>
 									</div><span class="typed"></span>
 								</div><!-- End / typing__module -->
 								
