--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -265,6 +265,9 @@
 									    <br>Finally, provide a comment section for people to express themselves can make them feel related to this brand. 
 									    <br>
 								<div class="work-img"><img src="assets/img/content/Recomd p4.png" alt=""></div>
+								  <br>  
+								    <br>
+  <button class="full" onclick="window.open('assets/img/TxDOT.pdf')"><p>Full Report</p></button>
 
 							
 
