--- a/about.html
+++ b/about.html
@@ -92,13 +92,13 @@
 									<h2 class="about__title">About me</h2>
 									<p class="about__subtitle">Just Keep Scrolling! Look How I Perceive Myself</p>
 									<p class="about__text">
-										“Think yourself as editor but not creator“
+										“Think yourself as an editor but not a creator“
 										<br>
-										<br>For me, the experiences of whole world are inputs that allow us to discover the world 
+										<br>For me, the experiences of whole world are inputs that allow us to discover
 										<br>
-										<br>The view of perceiving ourselves as editor makes me feel humble to learn everything
+										<br>The view of perceiving ourselves as editor makes me feel humble to learn
 										<br>
-										<br>The concept perfectly resonates what user experience researcher do
+										<br>The concept perfectly resonates what an user experience researcher do
 										<br>
 										<br>Thinking users as experts and observe their behaviors 
 										<br>
@@ -106,7 +106,7 @@
 										<br>
 										<br>Make actionable recommendation and then move onto next journey of satisfying endless curiosity
 										<br>
-									    <br>Did I tell you how much I love this job !</p>
+									    <br>Did I tell you how much I love this job ?!</p>
 									
 								    <button class="resume" onclick="window.open('assets/img/YI CHEN CHEN.pdf')"><p>Resume</p></button>
 
