--- a/work-detail_2.html
+++ b/work-detail_2.html
@@ -170,6 +170,14 @@
                                 <br>the next steps of the design process should involve multiple rounds of user research and rapid iterative design updates.
                               <br>
 								<div class="work-img"><img src="assets/img/content2/next step.jpeg" alt=""></div>
+								   <br>
+								      <br>
+								         <br>
+								<video controls>
+<source src="assets/img/content2/CHI2018 Hear App Prototype.ogg" type="video/ogg">
+<source src="assets/img/content2/CHI2018 Hear App Prototype.mp4" type="video/mp4">
+您的瀏覽器不支援此 HTML5 影片標籤
+
 							</div>
 						
 				</section>
