--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								
 								<!-- typing__module -->
 								<div class="typing__module">
-									<div class="typed-strings"><span>seek answers.</span><span>'m a UX researcher.</span><span>'m also a designer.</span>
+									<div class="typed-strings"><span>'m an answer seeker.</span><span>'m a UX researcher.</span><span>'m also a designer.</span>
 									</div><span class="typed"></span>
 								</div><!-- End / typing__module -->
 								
