--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -96,7 +96,7 @@
 <br>How I do:
 										<br>
 										<br>
-										After sorting out several aspects of research questions using affinity diagram, I strategized several research methods to focus on different problems, including both generative and evaluative research. 
+										After sorting out several aspects of research questions using affinity diagram, I strategized several research methods to focus on different problems, including both generative and evaluative research. I performed early research about the elements of a good online newsroom to clarify the research problem. Then, I used subject matter expert to gain insights and conducted interview and surveys for average drivers to know how they plan for a trip and find out more about driver’s behaviors. I also executed user testing to figure out the pain points of the current website.
 
 
 										<br>
@@ -111,7 +111,7 @@
 										<br>
 <br>What I learn:
 										<br>
-										<br>What I learned from this project is how to conduct interview and probe the question towards the answer.
+										<br>What I learned from this project is how to use different methods to solve problems. Also, using Sketch to compose a complete final report. 
 								<div class="work-img"><img src="assets/img/content/research question.png" alt=""></div>
 								<p class="about__text">
 							            <br>
