--- a/work-detail_2.html
+++ b/work-detail_2.html
@@ -91,7 +91,26 @@
                                  <br>
 								  <br>to address health information needs of musicians who are concerned about hearing health or who already suffer from hearing loss
 								 <br>
-								  <br>
+								  <br><br>How I do:
+										<br>
+										<br>
+										After listing out the main purposes we would like to achieve on this APP, my partner and I designed and organized it primarily into five functional sections: Learning, News, Social Networking, Social Support Groups, and Provider Location Services. 
+Additionally, the app will include links to curated self-monitoring resources and self-care products. 
+
+
+										<br>
+<br>My Role:
+										<br>
+										<br>Design, Prototyping, Wireframing, User Flow
+<br>
+<br>Tools:
+										<br>
+										<br>Adobe XD CC, Keynote
+
+										<br>
+<br>What I learn:
+										<br>
+										<br>What I learned from this project is how to communicate in an efficient way as we work in close collaboration within a small group to develop a prototype. Also, I have experience using Adobe XD for prototyping of which I proactively learned and taught myself in order to enhance my technical abilities. 
 								  <br>
 								   <br>
 								 <br>Background 
