--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">Let's see what I did.</h2>
-							<p class="page-title__text">All about users </p>
+							<p class="page-title__text">It's all about users </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
