--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -112,7 +112,7 @@
 <br><font size="5">What I learn:</font>
 										<br>
 										<br><font size="3">What I learned from this project is how to use different methods to solve problems. Also, using Sketch to compose a complete final report. </font>
-								<div class="work-img"><img src="assets/img/content/overview.png" alt=""></div>
+								<div class="work-img"><img src="assets/img/content/Overview.png" alt=""></div>
 								<p class="about__text">
 							            <br>
 							            <br>
@@ -140,7 +140,7 @@
 								<p class="about__text">		
 									<br>
 						            <br>
-								<div class="work-img"><img src="assets/img/content/Usability testing.png" alt=""></div>
+								<div class="work-img"><img src="assets/img/content/Usability Testing.png" alt=""></div>
 							<p class="about__text">
 										<br>
 										<br>
