--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
 										
 									<br><br>Did I tell you how much I love this job ?!</font></p>
 									
-								    <button class="resume" onclick="window.open('assets/img/Resume_YI CHEN CHEN.pdf')"><p>Resume</p></button>
+								    <button class="resume" onclick="window.open('assets/img/Resume_Yi Chen Chen_0915.pdf')"><p>Resume</p></button>
 
 
 									<!-- progress -->
