--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -147,7 +147,7 @@
 								<div class="dropshadowimg"><img src="assets/img/content/recommendation.png" alt=""></div>
 								       
 								        <br>
-								    <br>
+								    <br><font size="3">
   <button class="full" onclick="window.open('assets/img/TxDOT.pdf')"><p>Full Report</p></button>
 
 							
@@ -165,7 +165,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-lg-6 ">
-							<p class="footer__coppy">2018 &copy; Copyright <a href="http://awe7.com/">Awe7</a>. All rights Reserved.</p>
+							<p class="footer__coppy"><font size="3">2018 &copy; Copyright <a href="http://awe7.com/">Awe7</a>. All rights Reserved.</p>
 						</div>
 						<div class="col-md-6 col-lg-6 ">
 							<div class="footer__social">
