--- a/work-detail_3.html
+++ b/work-detail_3.html
@@ -171,6 +171,8 @@
 								<p class="about__text">
 									<br>
 										<br>
+										<br><font size="3">
+  <button class="full" onclick="window.open('assets/img/content3/EDDI.pdf')"><p>Full Report</p></button>
 				</section>
 				<!-- End / Section -->
 				
