--- a/work-detail_4.html
+++ b/work-detail_4.html
@@ -100,7 +100,7 @@
 <br><font size="5">How I do:</font>
 										
 										<br><font size="3">
-										We reviewed past academic and industry literature in order to better understand the concept of trust both independently and with respect to the P2P market. From affinity diagram exercise, four themes kept arising surrounding the topic of trust; control, authenticity, transparency, and word of mouth. Our competitive evaluation helped provide a baseline of must-haves in relation to user expectations due to their presence within competing products. The survey provided data for comparing 3 sharing markets side-by-side; home-sharing, ride-sharing, and the P2P resale market which decompose any points of anxiety or feeling of heightened risk. At last, performing moderated user testing incorporating eye-tracking software and interview methods in order to test hypotheses built by the results of the previous research methods.
+										We reviewed past academic and industry literature in order to better understand the concept of trust both independently and with respect to the P2P market. From affinity diagram exercise, four themes kept arising the topic of trust; control, authenticity, transparency, and word of mouth. Our competitive evaluation helped provide a baseline of must-haves in relation to user expectations due to their presence within competing products. The survey provided data for comparing 3 sharing markets side-by-side; home-sharing, ride-sharing, and the P2P resale market which decompose any points of anxiety or feeling of heightened risk. At last, performing moderated user testing incorporating eye-tracking software and interview methods in order to test hypotheses built by the results of the previous research methods.
  </font>
 
 
