--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -158,8 +158,8 @@
 								<p class="about__text">		
 									<div class=""><img src="assets/img/content/usability testing keyfind.png" alt=""></div>
 								<p class="about__text">		
-									<br>
-						            <br><div class=""><img src="assets/img/content/recomd p1.png" alt=""></div>
+									<br><br><font size="4">There are 4 stages of actionable recommendations to help TxDOT build an interactive platform. 
+						           <div class=""><img src="assets/img/content/recomd p1.png" alt=""></div>
 								<p class="about__text">		
 									<br>
 						            <br><div class=""><img src="assets/img/content/recomd p2.png" alt=""></div>
