--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -158,8 +158,10 @@
 								<p class="about__text">		
 									<div class=""><img src="assets/img/content/usability testing keyfind.png" alt=""></div>
 								<p class="about__text">		
-									<br><br><font size="4">There are 4 stages of actionable recommendations to help TxDOT build an interactive platform. 
-						         
+									<br><br><font size="4">There are 4 stages of actionable recommendations to help TxDOT build an interactive platform. <br><div class=""><img src="assets/img/content/usability testing p3.png" alt=""></div>
+						         <br>
+						            <br><div class=""><img src="assets/img/content/recomd p1.png" alt=""></div>
+								<p class="about__text">	
 									
 								    <br><font size="3">
   <button class="full" onclick="window.open('assets/img/TxDOT.pdf')"><p>Full Report</p></button>
