--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 										<div class="grid-item__content-wrapper">
 											
 											<!-- work -->
-											<div class="work"><a href="">
+											<div class="work"><a href="work-detail_5.html">
 													
 													<!-- hoverbox ef-push-bottom -->
 													<div class="hoverbox ef-push-bottom light">
