--- a/work-detail_4.html
+++ b/work-detail_4.html
@@ -160,12 +160,24 @@
 									<b>Summary:</b>
 									<br>Users consistently chose the host with the most information displayed. None of the 6 participants chose the host option based off of the current HomeAway UI. Instead, 4 chose Host 2 based off of what information Airbnb supplies and 2 chose Host 3. 
 									<br><br><div class=""><img src="assets/img/content4/eye task3.png" alt=""></div>
+									<br><div class=""><img src="assets/img/content4/eye task45.png" alt=""></div>
+									<br><br><br><div class=""><img src="assets/img/content4/eye task45 result.png" alt=""></div>
+									<font size="4">In every section of our study; literature review, competitive evaluation, survey, interviews, and user testing, knowing more and/or specific details about the host was brought up as a key aspect in consumer trust. For example, in our user testing, 4/6 participants said they would rent from the host who had the most information present. 
+									<br><br><div class=""><img src="assets/img/content4/recomd 1.png" alt=""></div>
+									<br><br><font size="4"> The desire for detailed and focused accounts from reviewers trended again across research methods. 
+										<br> - 91% of survey respondents rated reviews as one of the top two decision-making factors (equal to pictures). 
+										<br> - From the user interviews, one of the participants articulated, “I chose him because he talks about the experience of the house itself. Some other people’s long reviews about how great their trip experience are not that helpful and I’m not interested in that.” –Participant SP19-05
+										<br> - During user testing, 4/6 participants chose to book with the host whose profile contained the most information.
+									<br><br><div class=""><img src="assets/img/content4/recomd 2.png" alt=""></div>
+									<br><br><font size="4">Currently, HomeAway’s policies, verifying tactics, provider badge vernacular definitions, and general explanatory content <b>are not easily accessible</b> from a usability standpoint. At the same time, according to our survey results, 60% of respondents listed <b>guarantees</b> as a reason they use Airbnb most often for home-sharing rentals.
+										<br><br><div class=""><img src="assets/img/content4/recomd 3.png" alt=""></div>
+										<br><br><font size="4">In our survey, compared to the ride-sharing and online-selling markets, which both have key worrisome phases, the <b>home-sharing market</b> showed an even distribution (approximately 30%) of <b>anxiety across all phases</b> of the home-sharing experience. 
+											<br><br><br><div class=""><img src="assets/img/content4/recomd 4.png" alt=""></div>
 
 
 
-									
-<br><font size="3">
-  <button class="full" onclick="window.open('assets/img/content4/HomeAway.pdf')"><p>Full Report</p></button>
+	<br><br><font size="3">
+ 	 <button class="full" onclick="window.open('assets/img/content4/HomeAway.pdf')"><p>Full Report</p></button>
 
 							
 
