--- a/work-detail_4.html
+++ b/work-detail_4.html
@@ -116,7 +116,7 @@
 										<br>
 <br><font size="5">What I learn:</font>
 										
-										<br><font size="3"> </font>
+										<br><font size="3"> During the study, I've learned how to use, analyze eye tracking data and create heatmap to see what users are looking at when they enter the website. Meanwhile, I recognize the pros and cons of this methodology. For example, "think aloud" protocol may not be a suitable method during testing since we want to see users' actual eye movement without giving other distraction or intention to look at specific features. However, eye tracking is a great tool when you try to find out what draws people's attention and how their eyeballs move from place to place when they visit a website. </font>
 										<div class=""><img src="assets/img/content4/client.png" alt=""></div>
 								<p class="about__text">
 							            <br>
