--- a/work-detail_3.html
+++ b/work-detail_3.html
@@ -116,7 +116,7 @@
 										<br>
 <br><font size="5">What I learn:</font>
 										
-										<br><font size="3">What I learned from this project is how to use in-depth qualitative data to inform our design and reiterate the product.</font>
+										<br><font size="3">What I learned from this project is how to use in-depth qualitative data to inform design principle and reiterate the product. </font>
 								<div class=""><img src="assets/img/content3/client_dys.png" alt=""></div>
 								<p class="about__text">
 							            <br>
