--- a/work-detail_1.html
+++ b/work-detail_1.html
@@ -161,7 +161,7 @@
 		                     <br>
 							<div class=""><img src="assets/img/content/survey f2.png" alt=""></div>
 								
-								<br><font face= "Avenir",size="4"> Then, I want to ascertain how users perceive TxDOT and where do they find the information. I conducted <b>1-1 interview</b> by asking participants what are their typical driving behaviors, how do they plan on the trip and what do they know about TxDOT
+								<br><font face= "Avenir",size="4"> Then, I want to ascertain how users perceive TxDOT and where do they find the information. I conducted <b>1-1 interview</b> by asking participants what are their typical driving behaviors, how do they plan on the trip and what do they know about TxDOT.
 						         <br>
 						         <br><div class=""><img src="assets/img/content/interview p2.png" alt=""></div>
 								<p class="about__text">	
