--- a/work-detail_5.html
+++ b/work-detail_5.html
@@ -90,6 +90,7 @@
 												As UX researchers, we should care not only about the majority but about everyone.
 
 											<font face= "Avenir", size="4">
+											<br>
 											<br>In Summer 2019, I worked as an accessibility research intern at Express Scripts. I discovered during my internship that developing an accessible website was not just about ensuring that laws were followed or that it accommodated users with disabilities. We may also experience some form of impairments at some point of our life. For example, this may include people with cognitive disabilities, people recovering from concussions, and people who are distracted while driving. For these three types of people, they all require completing tasks with limited attention. It was an eye-opening experience in observing how participants navigate websites with assistive technologies, and it really helped establish my beliefs in the importance of inclusive design.
 
 
@@ -119,7 +120,7 @@
 
 									
 
-<br><font "Avenir", size="5">Tools:</font>
+<br><br><font "Avenir", size="5">Tools:</font>
 										
 										<br><font "Avenir", size="3">JAWS, JAWS Inspect, Color checker, WCAG, ARC toolkit, Nu html checker, Accessibility Insights for Web, Sketch
 </font>
